--- a/Man2Max/index.html
+++ b/Man2Max/index.html
@@ -2,7 +2,7 @@
 <head>
 <style>
 a{
-font-family:Verdana,Arial;
+font-family:Verdana,Arial, å¾®è»Ÿæ­£é»‘é«”, æ–°ç´°æ˜é«”;
 font-size:.8em;
 text-align:center;
 margin:3px;
@@ -16,18 +16,18 @@ a:hover{
 	text-decoration:none;
 }
 </style>
-<meta http-equiv="Content-Type" content="text/html; charset=big5" />
-<title> MAN2MAX ¹F¤H¿O </title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title> MAN2MAX é”äººç‡ˆ </title>
 </head>
-<body  bgcolor="#000000" onfocus="middle"  align="center" Vspace="0" Hspace="0" text="#FFFFFF" link="#FFFFFF"¡@vlink="#FFFFFF"¡@ alink="#FFFFFF">
+<body  bgcolor="#000000" onfocus="middle"  align="center" Vspace="0" Hspace="0" text="#FFFFFF" link="#FFFFFF"ã€€vlink="#FFFFFF"ã€€ alink="#FFFFFF">
 <div style="text-align:center; margin:0 auto">
 
 <embed src="index.swf" quality="high" bgcolor="#000000" width="480" height="480" name="MAN2MAX" align="TOP" allowScriptAccess="always" allowFullScreen="true" type="application/x-shockwave-flash" pluginspage="http://www.adobe.com/go/getflashplayer_tw" />
 <br>
-WELCOME TO MAN2MAX  ¹F¤H¿O¡I
-<p><font size="4" link="#FFFFFF"¡@vlink="#FFFFFF"¡@ alink="#FFFFFF">
+WELCOME TO MAN2MAX  é”äººç‡ˆï¼
+<p><font size="4" link="#FFFFFF"ã€€vlink="#FFFFFF"ã€€ alink="#FFFFFF">
 <a href="en/index.html">English</a>
-<a href="ch/index.html"> ¤¤¤å </a><br/>
+<a href="ch/index.html"> ä¸­æ–‡ </a><br/>
 
 
 <script language="javascript" src="http://toolkit.url.com.tw/counter/setcounter.php?sid=57760"></script>
