--- a/Man2Max/ch/collection_ch.htm
+++ b/Man2Max/ch/collection_ch.htm
@@ -427,15 +427,15 @@ function AC_GetArgs(args, ext, srcParamName, classid, mimeType){
       </object></th>
   </tr>
   <tr>
-    <th scope="row"> <p><font color="#FFFFFF" size="4">桌燈</font></p>
+    <th scope="row"> <p><font color="#FFFFFF" size="4" family="微軟正黑體, 新細明體">桌燈</font></p>
       <p><font size="1">&nbsp;</font></p></th>
-          <th scope="row"> <p><font color="#FFFFFF" size="4">立燈</font></p>
+          <th scope="row"> <p><font color="#FFFFFF" size="4" family="微軟正黑體, 新細明體">立燈</font></p>
       <p><font size="1">&nbsp;</font></p></th>
-          <th scope="row"> <p><font color="#FFFFFF" size="4">壁燈</font></p>
+          <th scope="row"> <p><font color="#FFFFFF" size="4" family="微軟正黑體, 新細明體">壁燈</font></p>
       <p><font size="1">&nbsp;</font></p></th>
-          <th scope="row"> <p><font color="#FFFFFF" size="4">吊燈</font></p>
+          <th scope="row"> <p><font color="#FFFFFF" size="4" family="微軟正黑體, 新細明體">吊燈</font></p>
       <p><font size="1">&nbsp;</font></p></th>
-          <th scope="row"> <p><font color="#FFFFFF" size="4">裝飾燈</font></p>
+          <th scope="row"> <p><font color="#FFFFFF" size="4" family="微軟正黑體, 新細明體">裝飾燈</font></p>
       <p><font size="1">&nbsp;</font></p></th>
   </tr>
   <tr>
